src/Grammar/SPRDParser.java
// Generated from SPRD.g4 by ANTLR 4.4
package Grammar;
 
    import java.util.ArrayList;
    import java.util.HashMap;
    import java.util.Map;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SPRDParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__9=1, T__8=2, T__7=3, T__6=4, T__5=5, T__4=6, T__3=7, T__2=8, T__1=9, 
		T__0=10, BOOLEANCOMP=11, IS=12, IF=13, ELSE=14, WHILE=15, BOOL=16, INTEGER=17, 
		IDENTIFIER=18, WHITESPACE=19, COMMENT=20, PRIORITYONEOP=21, PRIORITYTWOOP=22, 
		INTEGERCOMPARISION=23, AND=24, OR=25;
	public static final String[] tokenNames = {
		"<INVALID>", "'Get'", "'int'", "'print'", "'('", "')'", "'{'", "','", 
		"'}'", "'='", "'bool'", "BOOLEANCOMP", "'is'", "'if'", "'else'", "'while'", 
		"BOOL", "INTEGER", "IDENTIFIER", "WHITESPACE", "COMMENT", "PRIORITYONEOP", 
		"PRIORITYTWOOP", "INTEGERCOMPARISION", "'&&'", "'||'"
	};
	public static final int
		RULE_begin = 0, RULE_program = 1, RULE_compareInteger = 2, RULE_compareBoolean = 3, 
		RULE_comparisionExpr = 4, RULE_bExpr = 5, RULE_bSubExpr = 6, RULE_bTerm = 7, 
		RULE_subBTerm = 8, RULE_bFactor = 9, RULE_expr = 10, RULE_subExpr = 11, 
		RULE_term = 12, RULE_subTerm = 13, RULE_factor = 14, RULE_intDeclaration = 15, 
		RULE_boolDeclaration = 16, RULE_intAssignment = 17, RULE_boolAssignment = 18, 
		RULE_whileLoopConstruct = 19, RULE_whileCond = 20, RULE_loopBody = 21, 
		RULE_ifElseConstruct = 22, RULE_ifStatement = 23, RULE_ifCond = 24, RULE_ifBody = 25, 
		RULE_elseStatement = 26, RULE_elseBody = 27, RULE_printFunc = 28, RULE_scanFunc = 29;
	public static final String[] ruleNames = {
		"begin", "program", "compareInteger", "compareBoolean", "comparisionExpr", 
		"bExpr", "bSubExpr", "bTerm", "subBTerm", "bFactor", "expr", "subExpr", 
		"term", "subTerm", "factor", "intDeclaration", "boolDeclaration", "intAssignment", 
		"boolAssignment", "whileLoopConstruct", "whileCond", "loopBody", "ifElseConstruct", 
		"ifStatement", "ifCond", "ifBody", "elseStatement", "elseBody", "printFunc", 
		"scanFunc"
	};

	@Override
	public String getGrammarFileName() { return "SPRD.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private ArrayList<String> variableNames = new ArrayList<String>();
		private Map<String, String> variableType = new HashMap<String, String>();
	   
	    private boolean variableDefined(String name){
	    	//System.out.println(v ariableNames);
	    	//System.out.println(variableType);
	    	
	    		boolean doesContain = variableNames.contains(name);
	    		return doesContain;
	    		
	    }

	    private void defineVariable(String name,String type){
	        variableNames.add(name);
	        variableType.put(name,type);
	    }
	    
	    private boolean isBooleanVariable(String name){
	    	String type = variableType.get(name);
	    	return type.equals("bool");
	    }

	public SPRDParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class BeginContext extends ParserRuleContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public BeginContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_begin; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).enterBegin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).exitBegin(this);
		}
	}

	public final BeginContext begin() throws RecognitionException {
		BeginContext _localctx = new BeginContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_begin);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60); program();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<IntDeclarationContext> intDeclaration() {
			return getRuleContexts(IntDeclarationContext.class);
		}
		public IfElseConstructContext ifElseConstruct(int i) {
			return getRuleContext(IfElseConstructContext.class,i);
		}
		public List<WhileLoopConstructContext> whileLoopConstruct() {
			return getRuleContexts(WhileLoopConstructContext.class);
		}
		public List<BoolDeclarationContext> boolDeclaration() {
			return getRuleContexts(BoolDeclarationContext.class);
		}
		public IntDeclarationContext intDeclaration(int i) {
			return getRuleContext(IntDeclarationContext.class,i);
		}
		public List<IntAssignmentContext> intAssignment() {
			return getRuleContexts(IntAssignmentContext.class);
		}
		public List<PrintFuncContext> printFunc() {
			return getRuleContexts(PrintFuncContext.class);
		}
		public IntAssignmentContext intAssignment(int i) {
			return getRuleContext(IntAssignmentContext.class,i);
		}
		public List<IfElseConstructContext> ifElseConstruct() {
			return getRuleContexts(IfElseConstructContext.class);
		}
		public BoolAssignmentContext boolAssignment(int i) {
			return getRuleContext(BoolAssignmentContext.class,i);
		}
		public PrintFuncContext printFunc(int i) {
			return getRuleContext(PrintFuncContext.class,i);
		}
		public WhileLoopConstructContext whileLoopConstruct(int i) {
			return getRuleContext(WhileLoopConstructContext.class,i);
		}
		public List<BoolAssignmentContext> boolAssignment() {
			return getRuleContexts(BoolAssignmentContext.class);
		}
		public BoolDeclarationContext boolDeclaration(int i) {
			return getRuleContext(BoolDeclarationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__7) | (1L << T__0) | (1L << IF) | (1L << WHILE) | (1L << IDENTIFIER))) != 0)) {
				{
				setState(69);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(62); intDeclaration();
					}
					break;
				case 2:
					{
					setState(63); boolDeclaration();
					}
					break;
				case 3:
					{
					setState(64); intAssignment();
					}
					break;
				case 4:
					{
					setState(65); boolAssignment();
					}
					break;
				case 5:
					{
					setState(66); whileLoopConstruct();
					}
					break;
				case 6:
					{
					setState(67); ifElseConstruct();
					}
					break;
				case 7:
					{
					setState(68); printFunc();
					}
					break;
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompareIntegerContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public TerminalNode INTEGERCOMPARISION() { return getToken(SPRDParser.INTEGERCOMPARISION, 0); }
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public CompareIntegerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compareInteger; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).enterCompareInteger(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).exitCompareInteger(this);
		}
	}

	public final CompareIntegerContext compareInteger() throws RecognitionException {
		CompareIntegerContext _localctx = new CompareIntegerContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_compareInteger);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74); expr();
			setState(75); match(INTEGERCOMPARISION);
			setState(76); expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompareBooleanContext extends ParserRuleContext {
		public List<BExprContext> bExpr() {
			return getRuleContexts(BExprContext.class);
		}
		public TerminalNode BOOLEANCOMP() { return getToken(SPRDParser.BOOLEANCOMP, 0); }
		public BExprContext bExpr(int i) {
			return getRuleContext(BExprContext.class,i);
		}
		public CompareBooleanContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compareBoolean; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).enterCompareBoolean(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).exitCompareBoolean(this);
		}
	}

	public final CompareBooleanContext compareBoolean() throws RecognitionException {
		CompareBooleanContext _localctx = new CompareBooleanContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_compareBoolean);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78); bExpr();
			setState(79); match(BOOLEANCOMP);
			setState(80); bExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComparisionExprContext extends ParserRuleContext {
		public CompareIntegerContext compareInteger() {
			return getRuleContext(CompareIntegerContext.class,0);
		}
		public CompareBooleanContext compareBoolean() {
			return getRuleContext(CompareBooleanContext.class,0);
		}
		public ComparisionExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparisionExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).enterComparisionExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).exitComparisionExpr(this);
		}
	}

	public final ComparisionExprContext comparisionExpr() throws RecognitionException {
		ComparisionExprContext _localctx = new ComparisionExprContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_comparisionExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(82); compareInteger();
				}
				break;
			case 2:
				{
				setState(83); compareBoolean();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BExprContext extends ParserRuleContext {
		public BTermContext bTerm() {
			return getRuleContext(BTermContext.class,0);
		}
		public List<BSubExprContext> bSubExpr() {
			return getRuleContexts(BSubExprContext.class);
		}
		public BSubExprContext bSubExpr(int i) {
			return getRuleContext(BSubExprContext.class,i);
		}
		public BExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).enterBExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).exitBExpr(this);
		}
	}

	public final BExprContext bExpr() throws RecognitionException {
		BExprContext _localctx = new BExprContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_bExpr);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(86); bTerm();
			}
			setState(90);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(87); bSubExpr();
					}
					} 
				}
				setState(92);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BSubExprContext extends ParserRuleContext {
		public BTermContext bTerm() {
			return getRuleContext(BTermContext.class,0);
		}
		public TerminalNode OR() { return getToken(SPRDParser.OR, 0); }
		public BSubExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bSubExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).enterBSubExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).exitBSubExpr(this);
		}
	}

	public final BSubExprContext bSubExpr() throws RecognitionException {
		BSubExprContext _localctx = new BSubExprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_bSubExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93); match(OR);
			setState(94); bTerm();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BTermContext extends ParserRuleContext {
		public BFactorContext bFactor() {
			return getRuleContext(BFactorContext.class,0);
		}
		public List<SubBTermContext> subBTerm() {
			return getRuleContexts(SubBTermContext.class);
		}
		public SubBTermContext subBTerm(int i) {
			return getRuleContext(SubBTermContext.class,i);
		}
		public BTermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bTerm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).enterBTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).exitBTerm(this);
		}
	}

	public final BTermContext bTerm() throws RecognitionException {
		BTermContext _localctx = new BTermContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_bTerm);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(96); bFactor();
			}
			setState(100);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(97); subBTerm();
					}
					} 
				}
				setState(102);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubBTermContext extends ParserRuleContext {
		public BFactorContext bFactor() {
			return getRuleContext(BFactorContext.class,0);
		}
		public TerminalNode AND() { return getToken(SPRDParser.AND, 0); }
		public SubBTermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subBTerm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).enterSubBTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).exitSubBTerm(this);
		}
	}

	public final SubBTermContext subBTerm() throws RecognitionException {
		SubBTermContext _localctx = new SubBTermContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_subBTerm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103); match(AND);
			setState(104); bFactor();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BFactorContext extends ParserRuleContext {
		public Token IDENTIFIER;
		public TerminalNode BOOL() { return getToken(SPRDParser.BOOL, 0); }
		public BExprContext bExpr() {
			return getRuleContext(BExprContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(SPRDParser.IDENTIFIER, 0); }
		public BFactorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bFactor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).enterBFactor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).exitBFactor(this);
		}
	}

	public final BFactorContext bFactor() throws RecognitionException {
		BFactorContext _localctx = new BFactorContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_bFactor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				{
				setState(106); ((BFactorContext)_localctx).IDENTIFIER = match(IDENTIFIER);
				setState(107);
				if (!(isBooleanVariable((((BFactorContext)_localctx).IDENTIFIER!=null?((BFactorContext)_localctx).IDENTIFIER.getText():null)))) throw new FailedPredicateException(this, "isBooleanVariable($IDENTIFIER.text)");
				}
				break;
			case BOOL:
				{
				setState(108); match(BOOL);
				}
				break;
			case T__6:
				{
				setState(109); match(T__6);
				setState(110); bExpr();
				setState(111); match(T__5);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public SubExprContext subExpr(int i) {
			return getRuleContext(SubExprContext.class,i);
		}
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public List<SubExprContext> subExpr() {
			return getRuleContexts(SubExprContext.class);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_expr);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(115); term();
			}
			setState(119);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(116); subExpr();
					}
					} 
				}
				setState(121);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubExprContext extends ParserRuleContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public TerminalNode PRIORITYTWOOP() { return getToken(SPRDParser.PRIORITYTWOOP, 0); }
		public SubExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).enterSubExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).exitSubExpr(this);
		}
	}

	public final SubExprContext subExpr() throws RecognitionException {
		SubExprContext _localctx = new SubExprContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_subExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122); match(PRIORITYTWOOP);
			setState(123); term();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public SubTermContext subTerm(int i) {
			return getRuleContext(SubTermContext.class,i);
		}
		public FactorContext factor() {
			return getRuleContext(FactorContext.class,0);
		}
		public List<SubTermContext> subTerm() {
			return getRuleContexts(SubTermContext.class);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).exitTerm(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_term);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(125); factor();
			}
			setState(129);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(126); subTerm();
					}
					} 
				}
				setState(131);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubTermContext extends ParserRuleContext {
		public FactorContext factor() {
			return getRuleContext(FactorContext.class,0);
		}
		public TerminalNode PRIORITYONEOP() { return getToken(SPRDParser.PRIORITYONEOP, 0); }
		public SubTermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subTerm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).enterSubTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).exitSubTerm(this);
		}
	}

	public final SubTermContext subTerm() throws RecognitionException {
		SubTermContext _localctx = new SubTermContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_subTerm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132); match(PRIORITYONEOP);
			setState(133); factor();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FactorContext extends ParserRuleContext {
		public Token IDENTIFIER;
		public TerminalNode INTEGER() { return getToken(SPRDParser.INTEGER, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(SPRDParser.IDENTIFIER, 0); }
		public FactorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_factor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).enterFactor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SPRDListener ) ((SPRDListener)listener).exitFactor(this);
		}
	}

	public final FactorContext factor() throws RecognitionException {
		FactorContext _localctx = new FactorContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_factor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				{
				setState(135); ((FactorContext)_localctx).IDENTIFIER = match(IDENTIFIER);
				setState(136);
				if (!(!isBooleanVariable((((FactorContext)_localctx).IDENTIFIER!=null?((FactorContext)_localctx).IDENTIFIER.getText():null)))) throw new FailedPredicateException(this, "!isBooleanVariable($IDENTIFIER.text)");
				}
				break;
			case INTEGER:
				{
				setState(137); match(INTEGER);
				}
				break;
			case T__6:
				{
				setState(138); match(T__6);
				setState(139); expr();
				setState(140); match(T__5);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
